fix: profile documentation
